--- a/cli-config.yml
+++ b/cli-config.yml
@@ -45,3 +45,8 @@ dockerfile-tools : "Dockerfile-tools"
 
 # The relative path to the helm chart used for Kubernetes deployment
 chart-path : "chart/sampleroomspring"
+
+# Uncomment these as part of the steps to deploy to a Kubernetes cluster on IBM Public Cloud
+#deploy-target : "container"
+#deploy-image-target : "registry.your-region.bluemix.net/unique-name-space/sampleroomspring"
+#ibm-cluster : "your-cluster"
